Cambios en el header

--- a/ContendioHTML/contact.html
+++ b/ContendioHTML/contact.html
@@ -10,10 +10,10 @@
 <body>
     
     <header class="cabecera">
-        <a href="about_me.html" class="logo">WM</a>
+        <a href="index.html" class="logo">WM</a>
         <i class='bx bx-menu' id="menu-icon"></i>
         <nav class="navegacion">
-            <a href="about_me.html">About me</a>
+            <a href="index.html">About me</a>
             <a href="skills.html">Skills</a>
             <a href="hobbies.html">Hobbies</a>
             <a href="training.html">Training</a>
@@ -23,7 +23,7 @@
     </header>
 
     <div class="contenido-form">
-    <form action="#" class="formulario">
+    <form action="#" class="formulario" name="Contacto">
         <div class="informacion">
         <p class="title">Contactame</p>
         <p class="parrafo">¿Listo para empezar? Completa el formulario a continuación y me pondré en contacto contigo lo antes posible. Estoy aquí para ayudarte con cualquier pregunta que tengas sobre mis servicios o proyectos.</p>
