--- a/ContendioHTML/index.html
+++ b/ContendioHTML/index.html
@@ -10,10 +10,10 @@
 <body>
     
     <header class="cabecera">
-        <a href="about_me.html" class="logo">WM</a>
+        <a href="index.html" class="logo">WM</a>
         <i class='bx bx-menu' id="menu-icon"></i>
         <nav class="navegacion">
-            <a href="about_me.html">About me</a>
+            <a href="index.html">About me</a>
             <a href="skills.html">Skills</a>
             <a href="hobbies.html">Hobbies</a>
             <a href="training.html">Training</a>
