--- a/ContendioHTML/skills.html
+++ b/ContendioHTML/skills.html
@@ -11,15 +11,15 @@
 <body>
     
     <header class="cabecera">
-        <a href="index.html" class="logo">WM</a>
+        <a href="/ContendioHTML/index.html" class="logo">WM</a>
         <i class='bx bx-menu' id="menu-icon"></i>
         <nav class="navegacion">
-            <a href="index.html">About me</a>
-            <a href="skills.html">Skills</a>
-            <a href="hobbies.html">Hobbies</a>
-            <a href="training.html">Training</a>
-            <a href="projects.html">Projects</a>
-            <a href="contact.html">Contact</a>
+            <a href="/ContendioHTML/index.html">About me</a>
+            <a href="/ContendioHTML/skills.html">Skills</a>
+            <a href="/ContendioHTML/hobbies.html">Hobbies</a>
+            <a href="/ContendioHTML/training.html">Training</a>
+            <a href="/ContendioHTML/projects.html">Projects</a>
+            <a href="/ContendioHTML/contact.html">Contact</a>
         </nav>
     </header>
 
