--- a/ContendioHTML/projects.html
+++ b/ContendioHTML/projects.html
@@ -10,10 +10,10 @@
 <body>
     
   <header class="cabecera">
-    <a href="/ContendioHTML/index.html" class="logo">WM</a>
+    <a href="/index.html" class="logo">WM</a>
     <i class='bx bx-menu' id="menu-icon"></i>
     <nav class="navegacion">
-        <a href="/ContendioHTML/index.html">About me</a>
+        <a href="/index.html">About me</a>
         <a href="/ContendioHTML/skills.html">Skills</a>
         <a href="/ContendioHTML/hobbies.html">Hobbies</a>
         <a href="/ContendioHTML/training.html">Training</a>
