--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi portafolio</title>
-    <link rel="stylesheet" href="/Style/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -14,11 +14,11 @@
     <i class='bx bx-menu' id="menu-icon"></i>
     <nav class="navegacion">
         <a href="/index.html">About me</a>
-        <a href="/ContendioHTML/skills.html">Skills</a>
-        <a href="/ContendioHTML/hobbies.html">Hobbies</a>
-        <a href="/ContendioHTML/training.html">Training</a>
-        <a href="/ContendioHTML/projects.html">Projects</a>
-        <a href="/ContendioHTML/contact.html">Contact</a>
+        <a href="/skills.html">Skills</a>
+        <a href="/hobbies.html">Hobbies</a>
+        <a href="/training.html">Training</a>
+        <a href="/projects.html">Projects</a>
+        <a href="/contact.html">Contact</a>
     </nav>
 </header>
 
