--- a/hobbies.html
+++ b/hobbies.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Mi portafolio</title>
-    <link rel="stylesheet" href="/Style/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -15,11 +15,11 @@
         <i class='bx bx-menu' id="menu-icon"></i>
         <nav class="navegacion">
             <a href="/index.html">About me</a>
-            <a href="/ContendioHTML/skills.html">Skills</a>
-            <a href="/ContendioHTML/hobbies.html">Hobbies</a>
-            <a href="/ContendioHTML/training.html">Training</a>
-            <a href="/ContendioHTML/projects.html">Projects</a>
-            <a href="/ContendioHTML/contact.html">Contact</a>
+            <a href="/skills.html">Skills</a>
+            <a href="/hobbies.html">Hobbies</a>
+            <a href="/training.html">Training</a>
+            <a href="/projects.html">Projects</a>
+            <a href="/contact.html">Contact</a>
         </nav>
     </header>
 
