--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 </header>
 
     <div class="contenido-form">
-    <form action="#" class="formulario" name="Contacto" netlify>
+    <form class="formulario" name="Contacto" netlify>
         <div class="informacion">
         <p class="title">Contactame</p>
         <p class="parrafo">¿Listo para empezar? Completa el formulario a continuación y me pondré en contacto contigo lo antes posible. Estoy aquí para ayudarte con cualquier pregunta que tengas sobre mis servicios o proyectos.</p>
